--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Color Block Picker</title>
+    <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </head>
   <body>
+    <div id="messaging">
+    </div>
+    <div class="colors">
+    </div>
   </body>
 </html>
