display color blocks

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
   </head>
   <body>
     <div id="messaging">
+      <h1>Color Picker</h1>
     </div>
-    <div id="colors">
+    <div id="blockContainer">
+      <div class="colorBlock" id="red"></div>
+      <div class="colorBlock" id="green"></div>
+      <div class="colorBlock" id="yellow"></div>
+      <div class="colorBlock" id="blue"></div>
     </div>
   </body>
 </html>
