--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
   <body>
     <div id="messaging">
       <h1>Color Picker</h1>
+      <p>A random block has been selected. Click on the color blocks below until you've found the correct one!</p>
     </div>
     <div id="blockContainer">
-      <div class="colorBlock" id="red"></div>
-      <div class="colorBlock" id="green"></div>
-      <div class="colorBlock" id="yellow"></div>
-      <div class="colorBlock" id="blue"></div>
     </div>
   </body>
 </html>
