--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
       <p>A random block has been selected. Click on the color blocks below until you've found the correct one!</p>
     </div>
     <div id="blockContainer">
-      <div class="colorBlock" id="red"></div>
-      <div class="colorBlock" id="green"></div>
-      <div class="colorBlock" id="yellow"></div>
-      <div class="colorBlock" id="blue"></div>
+      <button>Generate Block</button>
     </div>
   </body>
 </html>
