change page title and disable appending answer to DOM outside of color block

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hex Value Picker</title>
+    <title>Hex Color Quiz</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </head>
   <body>
     <div id="messaging">
-      <h1>Color Picker</h1>
+      <h1>Hex Color Quiz</h1>
       <p>A random block has been selected. Click on the color blocks below until you've found the correct one!</p>
       <button id="generate">Generate New Block</button>
       <button id="start">Start Game</button>
